--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,7 +7,7 @@
 #nav_bar {
     position: fixed;
     width: 100%;
-    z-index: 100;
+    z-index: 200;
 }
 #nav_bar nav {
     align-items: center;
@@ -32,7 +32,7 @@
     color: blue;
     transform: 2s;
 }
-/* Estilos para el boton de registro HU2 */
+/* Estilos para el Boton de registro HU2 */
 #Registerbutton {
     font-size: 9.5px;
     height: 30px;
@@ -61,10 +61,10 @@
     display: flex;
     justify-content: space-around;
     flex-direction: column;
-    height: 500px;
+    height: 200px;
     margin: 50px auto;
     padding: 60px 68px 40px;
-    width: 400px;
+    width: 100px;
 }
 #formRegistro h2 {
     color: green;
@@ -83,13 +83,39 @@
     height: 20px;
     outline: none;
 }
-
+/* Estilos para Botones de administración HU4 */
+.contenido {
+    position: relative;
+}
+#ContenedorBotones {
+    text-align: center;
+    position: absolute;
+    top: 80px;
+    left: 20px;
+    z-index: 100;
+}
+#ContenedorBotones p {
+    margin: 20px;
+}
+.Boton {
+    background-color: gray;
+    border: 1px solid rgba(218, 95, 13, 0.959);
+    border-radius: 0.5em;
+    font-size: 1.3em;
+    margin-right: 20px;
+    padding: 5px 3px;
+    transition: all 300ms;
+    text-align: center;
+}
+.Boton:hover{
+    background-color: blue;
+    color: 	#FFA500;
+    transform: scale(1.2, 1.2);   
+}
 /* Estilos para pruebas temporales */
 .prueba {
-    margin-top: 80px;
+    margin-top: 100px;
     position: absolute;
-}
-section {
-  display: flex;
-  align-content: space-between;
+    margin-left: 250px;
+    margin-right: 20px;
 }
